feat: create authentication function using jwt from spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Application Configuration
 spring.application.name=library-management
-server.port=8086
+server.port=8088
 
 #Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,7 +10,12 @@ spring.datasource.password=postgres
 
 #JPA Configuration
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#JWT
+library_management.jwt.secret_key=${JWT_SECRET:secret}
+library_management.jwt.expiration=${JWT_EXPIRATION:1800}
+library_management.jwt.issuer=Library_Management_API
 
 
