feat: fix year formatted date to yyyy format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,16 @@ spring.datasource.password=postgres
 
 #JPA Configuration
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 #JWT
 library_management.jwt.secret_key=${JWT_SECRET:secret}
 library_management.jwt.expiration=${JWT_EXPIRATION:1800}
 library_management.jwt.issuer=Library_Management_API
+
+#
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
 
 
